<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="37dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:background="@drawable/bg_round"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/folder_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_round"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="8dp"
            tools:text="ciao/ciao" />
    </LinearLayout>

    <!--content-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/dir_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

    </android.support.v7.widget.RecyclerView>

    <!--add file_folder-->
    <LinearLayout
        android:id="@+id/add_folder_wrapper"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_margin="8dp"
        android:background="@drawable/bg_round"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_add_folder"
            android:layout_width="37dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"

            android:src="@drawable/ic_add" />

        <TextView
            android:id="@+id/tv_add_folder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/dialog_chooser_add_folder" />

        <EditText
            android:id="@+id/et_add_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/dialog_chooser_add_folder_hint"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/empty_dir"
        android:textAlignment="center"
        android:textSize="21sp"
        android:visibility="gone" />

</LinearLayout>
